fix css for card align

--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ header {
   border-radius: 5px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: flex-start;
 }
 
